# mailypoppins

./: AGENTS.md  BACKLOG.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  NAME.md  README.md  agent.md  roadmap.md
.claude/: claude.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  auth.md  exchange-setup.md  herdr-tui-inspiration.md  lessons-learned.md  release-process.md  secrets.md
docs/plans/: calendar-invites.md  data-access-layer.md  tui-restructure-views.md
docs/tickets/: 0001-auto-fetch-on-tui-startup.md  0002-persist-mailbox-states.md  0003-cold-start-async-indexing.md  0004-fix-read-unread-sync.md  0005-parallel-imap-fetch-per-mailbox.md  0006-attachment-paths-after-archive.md  0007-flagging-starring.md  0008-threading-conversation-view.md  0009-desktop-notifications.md  0010-inline-image-rendering.md  0011-ci-release-pipeline.md  0012-apple-developer-id-signing.md  0013-homebrew-tap.md  0014-linux-packaging.md  0015-cross-platform-smoke-tests.md  0016-attachment-open-for-drafts.md  0017-jump-to-date.md  0018-quick-move-between-mailboxes.md  0019-configurable-keybindings.md  0020-accept-calendar-invitations.md  0021-mark-as-draft.md  0022-consistent-naming.md  0023-enable-theme-config.md  0024-sorting-email-inbox.md  0025-access-detailed-logs.md  0026-send-calendar-invitations.md  0027-imip-receive-parse.md  0028-imip-send-invite.md  0029-imip-rsvp-reply.md  0030-imip-reply-reconciliation.md  0031-imip-cancel-update.md  0032-tui-foundation-package.md  0033-view-switcher-contacts-view.md  0034-local-calendar-view.md  0035-graph-admin-approval.md  0036-graph-sync-backend.md  0037-sqlite-store-engine-skeleton.md  0038-read-path-to-db.md  0039-pending-ops-queue.md  0040-drop-file-layer-cutover.md  (+6 more)
packaging/homebrew/: mailypoppins.rb.tmpl
scripts/: codesign-macos.sh  deploy-website.sh  install.sh  regen-website-keys.sh  update-homebrew-formula.sh
src/: calendar.rs  calendar_cmd.rs  config.rs  config_cmd.rs  contacts_cmd.rs  draft.rs  graph.rs  imap_client.rs  invite.rs  lib.rs  main.rs  notify.rs  oauth2.rs  parse.rs  reconcile.rs  secrets.rs  send.rs  sync.rs  timing.rs  types.rs
src/config_cmd/: helpers.rs  init.rs  migrate.rs  mod.rs  oauth2.rs  (+4 more)
tests/: draft_integration.rs  imip_integration.rs  save_emails_integration.rs  secrets_integration.rs  sync_integration.rs
website/: astro.config.mjs  package.json  pnpm-lock.yaml
(+73 files in other folders)
