[package]
name = "email"
version = "0.8.0"
edition = "2021"
description = "A CLI tool for sending emails from Markdown drafts with YAML frontmatter"
authors = ["Sylvain Hellin"]

[lib]
name = "email"
path = "src/lib.rs"

[[bin]]
name = "email"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
lettre = { version = "0.11", features = ["smtp-transport", "tokio1-native-tls", "builder"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
gray_matter = "0.2"
pulldown-cmark = "0.9"
anyhow = "1.0"
keyring = { version = "3", features = ["apple-native", "linux-native"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
zeroize = { version = "1.7", features = ["derive"] }
machine-uid = "0.5"
rand = "0.8"
chrono = "0.4"
walkdir = "2.4"
colored = "2.1"
tokio = { version = "1", features = ["full"] }
shellexpand = "3.1"
toml = "0.8"
mime_guess = "2"
async-imap = "0.11"
async-native-tls = "0.5"
async-std = { version = "1", features = ["attributes"] }
futures = "0.3"
mailparse = "0.15"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
html2text = { version = "0.14", features = ["css"] }
log = "0.4"
simplelog = "0.12"
time = { version = "0.3", features = ["macros"] }
ratatui = "0.29"
crossterm = "0.28"
arboard = "3"
nucleo-matcher = "0.3"
regex = "1"
serde_json = "1"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tempfile = "3"
insta = "1.39"
